fixed prev-next spacing issue

--- a/leased-carousel.css
+++ b/leased-carousel.css
@@ -23,10 +23,10 @@ img {
 .next {
 	cursor: pointer;
 	position: absolute;
-	top: 50%;
+	top: 40%;
 	width: auto;
-	padding: 2%;
-	margin-top: -22px;
+	padding: 2% 2% 2% 2%;
+	margin: 3% 3% 3% 3%;
 	font-weight: bold;
 	font-size: 2.5em;
 	transition: 0.6s ease;
@@ -36,9 +36,9 @@ img {
 
 /* Position the "next button" to the right */
 .next {
-	right: 0;
+	right: 5%;
 	border-radius: 3px 0 0 3px;
-	margin-right: 0.6em;
+	margin-right: auto;
 }
 
 /* On hover, add a grey background color */
